Update README.md
added usage to README.md